# shoggoth.rs

./: Cargo.toml  README.md
benches/: nat.rs
doc/: search-index.js
doc/shoggoth/: index.html  macro.list!.html  macro.list_match!.html  macro.seq_head!.html  macro.seq_tail!.html  macro.ty!.html  stability.html  stability.json
doc/shoggoth/bit/: index.html  struct._0.html  struct._1.html  trait.Bit.html
doc/shoggoth/impls/: index.html
doc/shoggoth/list/: fn.nil.html  index.html  struct.Cons.html  struct.Nil.html  trait.List.html  trait.ToSingleton.html  type.Append.html  type.Single.html
doc/shoggoth/nat/: index.html  struct.W.html  trait.IsNat.html  trait.Nat.html  trait.Pos.html
doc/shoggoth/ops/: index.html
doc/shoggoth/order/: index.html  struct.Eq.html  struct.GT.html  struct.LT.html  trait.Comparison.html
doc/shoggoth/reflect/: index.html  trait.Reflects.html  trait.Reifies.html
doc/src/shoggoth/: bit.rs.html  lib.rs.html  order.rs.html  reflect.rs.html
macros/: Cargo.toml
macros/src/: lib.rs
plugins/: Cargo.toml
plugins/src/: boilerplate.rs  lib.rs  numerics.rs  products.rs
plugins/src/numerics/: nat.rs
src/: bit.rs  bool.rs  diff.rs  equality.rs  function.rs  functor.rs  hkt.rs  hlist.rs  lib.rs  list.rs  monad.rs  nat.rs  order.rs  product.rs  products.rs  reflect.rs  singleton.rs  squash.rs  tuple.rs  tuples.rs
src/data/: bool.rs  mod.rs  nat.rs  order.rs
src/data/diff/: mod.rs
src/data/list/: mod.rs
src/data/reflect/: mod.rs
src/impls/: mod.rs  product.rs
src/impls/std/: list.rs  mod.rs  tuple.rs
src/list/: diff.rs  mod.rs
src/macros/: bit.rs  fam.rs  list.rs  mod.rs  nat.rs  phantom.rs  seq.rs
src/nat/: boilerplate.rs  mod.rs
src/nat/boilerplate/: add.rs  add_carry.rs  compare.rs  compare_cont.rs  double_mask.rs  double_pred_mask.rs  mod.rs  pred.rs  pred_double.rs  pred_mask.rs  sub.rs  sub_mask.rs  sub_mask_carry.rs  succ.rs
src/num/nat/: mod.rs
src/numerics/: bit.rs  mod.rs
src/op/: mod.rs
src/products/: diff.rs  list.rs  mod.rs
src/syntax/: product.rs
src/tuple/: boilerplate.rs  mod.rs
src/ty/: bit.rs  bool.rs  check.rs  eq.rs  fin.rs  fun.rs  hlist.rs  int.rs  kind.rs  lens.rs  list.rs  literal.rs  mod.rs  nat.rs  star.rs  val.rs  wit.rs  witness.rs  zipper.rs
tests/: list.rs  tuple.rs
(+118 files in other folders)
